--- a/arch/arm64/configs/mido_defconfig
+++ b/arch/arm64/configs/mido_defconfig
@@ -6,12 +6,17 @@
 # Velvet
 CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_RELAXED=y
+CONFIG_CPU_FREQ_GOV_ELECTRON=y
+CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_IOSCHED_SWITCHER=y 
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_MSM_TRACK_FREQ_TARGET_INDEX=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_CRYPTO_CRC32_ARM64=y
 
 #
 CONFIG_ARM64=y
